    automata containing states without successors, as in the output of
    to_finite().

  - purge_dead_states() will now also remove edges labeled by false
    (except self-loops).

  Bugs fixed:

  - reduce_parity() produced incorrect results when applied to
    automata with deleted edges.

  - work around a portability issue in Flex 2.6.4 preventing
    compilation on OpenBSD.

New in spot 2.10.4  (2022-02-01)

  Bug fixed:

  - Fix memory leaks in Python bindings for several iteration objects.
    This occured while itering on twa_graph.out(), twa_graph.edges(),
    twa_graph.univ_dests(), kripke_graph.out(), kripke_graph.edges(),
    mark_t.sets(), scc_info.edges_of(), scc_info.inner_edges_of(), and
    on an scc_info instance.

New in spot 2.10.3  (2022-01-15)

  Bugs fixed:

  - On automata where the absence of color is not rejecting
    (e.g. co-Büchi) and where the initial state was in a rejecting
    SCC, sbacc() could output a superfluous state.  (Issue #492)

  - Compared to 2.9.8, complement() (and many functions using it) was
    slower and produced larger outputs on some automata with more than
    32 states due to an optimization of the determinization being
    unintentionally disabled.

  - The split_2step() function used to create a synthesis game could
    complain that it was unable to complement a monitor (Issue #495).

  - Work around GraphViz bug #2179 by avoiding unnecessary empty
    lines in the acceptance conditions shown in dot.

  - Fix a case where generic_accepting_run() incorrectly returns a
    cycle around a rejecting self-loop.

  - Mealy machines resulting from SAT-based minimization could differ
    on architectures with different hash tables implementations.

  - org-mode moved to GNU ELPA (Issue #496).

New in spot 2.10.2  (2021-12-03)

  Bugs fixed:

  - twa_graph::purge_dead_states() now also removes edges labeled by
    bddfalse.

  - only use sched_getcpu() and pthread_setaffinity_np() when they are
    available.
