@@ -1,5 +1,5 @@
 # -*- mode: shell-script; coding: utf-8 -*-
-# Copyright (C) 2009, 2010, 2012, 2013, 2015 Laboratoire de Recherche
+# Copyright (C) 2009, 2010, 2012, 2013, 2015, 2022 Laboratoire de Recherche
 # et Développement de l'Epita (LRDE).
 # Copyright (C) 2003, 2004, 2006 Laboratoire d'Informatique de Paris 6 (LIP6),
 # département Systèmes Répartis Coopératifs (SRC), Université Pierre
@@ -57,6 +57,7 @@ case $srcdir in
   *) srcdir=../$srcdir
 esac
 
+AWK='@AWK@'
 DOT='@DOT@'
 LBTT="@LBTT@"
 LBTT_TRANSLATE="@LBTT_TRANSLATE@"
